# INITI_test_task

./: CMakeLists.txt  main.cpp
